syntax = "proto3";
package schedule_tacking;
import "google/protobuf/empty.proto";
option go_package = ".";

service ScheduleTracking{
  //yes
  rpc AddContainersOnTrack(AddOnTrackRequest) returns (AddOnTrackResponse) {};
  //yes
  rpc AddBillNosOnTrack(AddOnTrackRequest) returns (AddOnTrackResponse) {};
  //yes
  rpc UpdateTrackingTime(UpdateTrackingTimeRequest) returns (RepeatedBaseAddOnTrackResponse) {};
  //yes
  rpc AddEmailsOnTracking(AddEmailRequest) returns (google.protobuf.Empty) {};
  //yes
  rpc DeleteEmailFromTrack(DeleteEmailFromTrackRequest) returns (google.protobuf.Empty) {};
  //yes
  rpc DeleteContainersFromTrack(DeleteFromTrackRequest) returns (google.protobuf.Empty) {};
  //yes
  rpc DeleteBillNosFromTrack(DeleteFromTrackRequest) returns (google.protobuf.Empty) {};
  //yes
  rpc GetInfoAboutTrack(GetInfoAboutTrackRequest) returns (GetInfoAboutTrackResponse) {};
  //yes
  rpc GetTimeZone(google.protobuf.Empty) returns (GetTimeZoneResponse) {};
  //yes
  rpc ChangeEmailMessageSubject(ChangeEmailMessageSubjectRequest) returns (google.protobuf.Empty) {};
}
message UpdateTrackingTimeRequest{
  repeated string numbers = 1;
  string time = 2;
  int64 user_id = 3;
}
message AddOneNumberOnTrackRequest{
  int64 user_id = 1;
  string number = 2;
  repeated string emails = 3;
  string email_message_subject = 4;
  string time = 5;
}
message AddOnTrackRequest{
  repeated AddOneNumberOnTrackRequest add_on_track_request = 1;
}
message BaseAddOnTrackResponse{
  bool success = 1;
  string number = 2;
  int64 next_run_time = 3;
}
message RepeatedBaseAddOnTrackResponse{
  repeated BaseAddOnTrackResponse response = 1;
}
message AddOnTrackResponse{
  repeated BaseAddOnTrackResponse base_response = 1;
  repeated string already_on_track = 3;
}
message AddEmailRequest{
  repeated string numbers = 1;
  repeated string emails = 2;
  int64 user_id = 3;
}
message DeleteEmailFromTrackRequest{
  string number = 1;
  string email = 2;
  int64 user_id = 3;
}
message GetInfoAboutTrackRequest{
  string number = 1;
  int64 user_id = 3;
}
message GetInfoAboutTrackResponse{
  string number = 2;
  repeated string emails = 3;
  int64 next_run_time = 4;
  string email_message_subject = 5;
}
message DeleteFromTrackRequest{
  int64 user_id = 1;
  repeated string number = 2;
}
message GetTimeZoneResponse{
  string time_zone = 1;
}
message ChangeEmailMessageSubjectRequest{
  string number = 1;
  string new_subject = 2;
  int64 user_id = 3;
}